--- a/README
+++ b/README
@@ -1,8 +1,15 @@
-Yasser Khan
+###Yasser Khan
 
-To build account client library
+##To build account client library
+
+```
 go build ./...
+```
 
-To run all tests
+##To run all tests
+
+```
 docker compose up -d
+
 go test ./... -v -count=1
+```
